syntax = "proto3";
package shipmentApi;
option go_package = "gitlab.lrz.de/vss/semester/ob-23ss/blatt-2/blatt2-grp06/microservices/api/shipmentApi";

import "microservices/api/types/types.proto";

message ShipMyOrderRequest {
    uint32 customerId = 1;
    uint32 orderId = 2;
}

message ShipMyOrderReply {
    uint32 orderId = 1;
    types.Address address = 2;
}

message IsOrderShippedRequest {
    uint32 customerId = 1;
    uint32 orderId = 2;
}

message IsOrderShippedReply {
    bool isShipped = 1;
}

message RetoureRequest {
    uint32 customerId = 1;
    uint32 orderId = 2;
    bool wantRefund = 3;
    uint32 product = 4;
}

message RetoureReply {
    bool success = 1;
}
