syntax = "proto3";
package api;
option go_package = ".;api";

service ShipmentService {
    rpc ShipmentOrder (ShipMyOrderRequest) returns (ShipMyOrderReply){}
}

message Address {
    string street = 1;
    string zip = 3;
    string city = 4;
    string country = 5;
}

message Deliverer {
    uint32 delivererId = 1;
    string name = 2;
    Address address = 3;
}

message ShipMyOrderRequest {
    uint32 customerId = 1;
    uint32 orderId = 2;
}

message ShipMyOrderReply {
}
